force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/G2Crowd__G2_Visiting_Organization__c.object-meta.xml
<CustomObject>
    <label>G2 Visiting Organization</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G2 Visiting Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>