force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Account_Generated__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Account_Generated__c</fullName>
    <formula>((G2Crowd__Account__r.CreatedDate - CreatedDate)*24*60) &lt;= 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Generated</label>
    <type>Checkbox</type>
</CustomField>