force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Activity_Level__c</fullName>
    <description>Activity Level measures a buyer&apos;s general activity on G2 by aggregating buyer activity data, such as time spent per page and the total number of pages visited.</description>
    <inlineHelpText>Activity Level refers to how active an organization is on G2 by taking into account the total number of pages visited and time spent on G2.</inlineHelpText>
    <label>Activity Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>