force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Alexa_Global_Rank__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Alexa_Global_Rank__c</fullName>
    <label>Alexa Global Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>