force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Auto_Generated__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Auto_Generated__c</fullName>
    <formula>CONTAINS(Name, &apos;(Auto Generated)&apos;)</formula>
    <label>Auto Generated</label>
    <type>Checkbox</type>
</CustomField>