force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Buying_Stage__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Buying_Stage__c</fullName>
    <description>Buying Stage evaluates your buyer&apos;s journey across G2 using multiple funnel-dependent factors, including page engagement and signal type.</description>
    <inlineHelpText>Buying Stage takes into account an organization’s journey on G2, i.e. types of pages visited, and the level of engagement on each page.</inlineHelpText>
    <label>Buying Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>