force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Description__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Description__c</fullName>
    <label>Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>