force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Difference_In_Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Difference_In_Visit_Time__c</fullName>
    <formula>(G2Crowd__First_Event_Time__c - G2Crowd__Account__r.CreatedDate)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference In Visit Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>