force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Domain_Aliases__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Domain_Aliases__c</fullName>
    <label>Domain Aliases</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>