force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Facebook__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Facebook__c</fullName>
    <label>Facebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>