force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__First_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__First_Event_Time__c</fullName>
    <label>First Event Time</label>
    <summarizedField>G2Crowd__G2_Event__c.G2Crowd__Time__c</summarizedField>
    <summaryForeignKey>G2Crowd__G2_Event__c.G2Crowd__G2_Visitor__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>