force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__G2_Subscribed_Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_Subscribed_Organization_ID__c</fullName>
    <externalId>true</externalId>
    <label>G2 Subscribed Organization ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>