force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Lead_Ids__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Lead_Ids__c</fullName>
    <label>Lead Ids</label>
    <type>TextArea</type>
</CustomField>