force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Mapped__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Mapped__c</fullName>
    <formula>IF(CONTAINS(Name, &apos;(Auto Generated)&apos;), &apos;Auto Mapped&apos;,
IF(!CONTAINS(Name, &apos;(Auto Generated)&apos;) &amp;&amp; (!ISBLANK(G2Crowd__Account__c) || !ISBLANK(G2Crowd__Lead_Ids__c)), &apos;Manual Mapped&apos;, &apos;Unmapped&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapped</label>
    <type>Text</type>
</CustomField>