force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Most_Recent_Event__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Most_Recent_Event__c</fullName>
    <label>Most Recent Event</label>
    <summarizedField>G2Crowd__G2_Event__c.G2Crowd__Time__c</summarizedField>
    <summaryForeignKey>G2Crowd__G2_Event__c.G2Crowd__G2_Visitor__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>