force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>G2 Visiting Organizations</relationshipLabel>
    <relationshipName>G2_Visiting_Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>