force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Street_Name__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Street_Name__c</fullName>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>