force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Time_Zone__c</fullName>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>