force-app/main/default/objects/G2Crowd__G2_Visiting_Organization__c/fields/G2Crowd__Twitter_Bio__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__Twitter_Bio__c</fullName>
    <label>Twitter Bio</label>
    <type>TextArea</type>
</CustomField>